<resources>
    <string name="app_name">Quizeo</string>
    <string name="title_text">Quizeo</string>
    <string name="out_of_text">Question 23/30</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">questions will come here.....</string>
    <string name="text_formatted">Question: %d/%d</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="startbutton">Start</string>
    <string name="GO_TO">JAVA</string>
    <string name="option_text">Select the language for Quiz </string>
    <string name="todo">TODO</string>
    <string name="select_button">PYTHON</string>
    <string name="email_hint">Email</string>
    <string name="email_add">Email</string>
    <string name="passwordhint">Password</string>
    <string name="confirmpasswordhint">Confirm Password</string>
    <string name="logintext">Login</string>
    <string name="loginor">or</string>
    <string name="createtext">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="create_account">Register</string>
    <string name="finish_quiz">View Result</string>
    <string name="lets_have_a_quize">Let\'s have a quiz</string>
    <string name="about">About</string>
    <string name="check_internet">Checking Internet Connection</string>
    <string name="connected">Internet Connected</string>
    <string name="notConnected">Internet not Connected</string>
    <string name="enter_the_email_address_associated_with_your_account_and_we_ll_send_you_a_link_to_reset_your_password">Enter the email address associated with your account and we\'ll send you a link to reset your password</string>
    <string name="quizeo_v0_1_3">Quizeo v0.1.3</string>
</resources>