<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialogbg1"

        tools:context=".MainActivity2">


        <TextView
            android:id="@+id/titletext2"
            style="@style/MainTextStyle"
            android:text="@string/title_text"
            android:textColor="@color/light_grey_text_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_out_of2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/out_of_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/score_textview2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titletext2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="365dp"
            android:layout_height="134dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:contentPaddingLeft="20dp"
            app:contentPaddingRight="10dp"
            app:cardBackgroundColor="#0B0B27"
            app:cardCornerRadius="15dp"
            app:cardElevation="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of2">

            <TextView
                android:id="@+id/question_text_view2"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="10dp"
                android:text="@string/placeholder"
                android:textColor="#F1EEEE"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true2"
            style="@style/ButtonStyle"
            android:layout_width="365dp"
            android:layout_height="58dp"
            android:layout_marginTop="12dp"
            android:text="@string/true_button"
            android:textSize="20sp"
            app:backgroundTint="#060629"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view2" />

        <Button
            android:id="@+id/button_false2"
            style="@style/ButtonStyle"
            android:layout_width="365dp"
            android:layout_height="58dp"
            android:layout_marginTop="12dp"
            android:text="@string/false_button"
            android:textSize="20sp"
            app:backgroundTint="#060629"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true2" />

        <Button
            android:id="@+id/button_next2"
            style="@style/ButtonStyle"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/next_button"
            android:textSize="20sp"
            app:backgroundTint="#060629"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false2" />

        <Button
            android:id="@+id/button_prev2"
            style="@style/ButtonStyle"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="Prev"
            android:textSize="20sp"
            app:backgroundTint="#060629"
            app:layout_constraintEnd_toStartOf="@+id/button_next2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false2" />

        <TextView
            android:id="@+id/score_textview2"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="score"
            android:textColor="#ECE8E8"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/card_view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.312" />

        <Button

            android:id="@+id/finishbutton2"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/finish_quiz"
            android:textSize="20sp"
            app:backgroundTint="#060629"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
