<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/dialogbg"

    android:padding="18.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:id="@+id/linearlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|end"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:paddingTop="25dp"
            android:src="@drawable/frontscreenimage" />

        <AutoCompleteTextView
            android:id="@+id/emaillogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48.0dip" />

        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip"
            android:layout_marginBottom="30.0dip"
            android:hint="@string/passwordhint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48.0dip" />


        <Button
            android:id="@+id/forgot"
            android:layout_width="193dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:gravity="top|end"
            android:text="Forgot Password?"
            android:textAllCaps="false"

            android:textColor="@android:color/holo_purple"
            android:textSize="12sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip"
            android:background="@drawable/down_finish"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/logintext"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <ProgressBar
            android:id="@+id/loginprogressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingTop="20dp"
            android:visibility="invisible" />

<!--        <TextView-->
<!--            android:id="@+id/loginor"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/roboto_medium"-->
<!--            android:gravity="center"-->
<!--            android:paddingTop="5dp"-->
<!--            android:text="@string/loginor"-->
<!--            android:textSize="18.0sp"-->
<!--            android:textStyle="bold" />-->


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="411dp"
        android:layout_height="83dp">

        <Button
            android:id="@+id/createaccountbutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="end"

            android:text="@string/createtext"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="Don't Have Account?"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.234"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.271" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>